# mouce

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: common.rs  darwin.rs  error.rs  lib.rs  linux_x11.rs  nix_x11.rs  windows.rs
src/nix/: linux_uinput.rs  mod.rs  uinput.rs  x11.rs
