[package]
name = "mouce"
version = "0.1.1"
edition = "2021"
authors = ["Emre Bicer <oebicer@gmail.com>"]
license = "MIT"
description = "A library that aims to help simulating mouse actions across different platforms."
homepage = "https://github.com/emrebicer/mouce"
repository = "https://github.com/emrebicer/mouce"
readme = "README.md"
keywords = ["mouse", "movement", "click", "scroll", "events"]
categories = ["accessibility", "command-line-utilities"]

[features]
build-binary = ["clap"]

[lib]
name = "mouce"
path = "src/lib.rs"

[[bin]]
name = "mouce"
path = "src/bin/main.rs"
required-features = ["build-binary"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"], optional = true }
