[package]
name = "mouce"
version = "0.1.5"
edition = "2021"
authors = ["Emre Bicer <oebicer@gmail.com>"]
license = "MIT"
description = "A library that aims to help simulating mouse actions across different platforms."
homepage = "https://github.com/emrebicer/mouce"
repository = "https://github.com/emrebicer/mouce"
readme = "README.md"
keywords = ["mouse", "movement", "click", "scroll", "events"]
categories = ["accessibility", "command-line-utilities"]

[profile.release]
# Enable debug assertions, otherwise uinput module
# does not work properly on release mode
debug-assertions = true

[features]
cli = ["clap"]

[lib]
name = "mouce"
path = "src/lib.rs"

[[bin]]
name = "mouce"
path = "src/bin/main.rs"
required-features = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
glob = "0.3.0"

[dependencies]
clap = { version = "3.1.8", features = ["derive"], optional = true }
